--- a/src/Components/lidar_vlidort/Aod_EOS.rc
+++ b/src/Components/lidar_vlidort/Aod_EOS.rc
@@ -37,6 +37,8 @@ filename_optical_properties_SS: ExtData/optics_SS.v3_5.nc
 filename_optical_properties_BC: ExtData/optics_BC.v1_5.nc
 filename_optical_properties_OC: ExtData/optics_OC.v1_5.nc
 filename_optical_properties_SU: ExtData/optics_SU.v1_5.nc
+filename_optical_properties_NI:  ExtData/optics_NI.v2_5.nc
+filename_optical_properties_BRC: ExtData/optics_BRC.v1_5.nc
 
 #filename_optical_properties_DU: ExtData/g5chem/x.OLD/optics_DU.v4.nc
 #filename_optical_properties_SS: ExtData/g5chem/x.OLD/optics_SS.v3.nc
