PC f2py module name must be unique

--- a/src/Components/stn_vlidort/GNUmakefile
+++ b/src/Components/stn_vlidort/GNUmakefile
@@ -111,9 +111,9 @@ $(LIB) lib : $(DEPS) $(OBJS)
 # ------------------------
 python: $(PY_EXTS)
 
-VLIDORT_.$(F2PYEXT): VLIDORT_py.F90 
-	$(F2PY) -c -m VLIDORT_ $(M). $(M)$(INC_GEOVLIDORT) \
-                 VLIDORT_py.F90 $(LIBS)                  
+VLIDORT_.$(F2PYEXT): VLIDORT_STN_py.F90 
+	$(F2PY) -c -m VLIDORT_STN_ $(M). $(M)$(INC_GEOVLIDORT) \
+                 VLIDORT_STN_py.F90 $(LIBS)                  
 # 	$(CP) -p VLIDORT_.$(F2PYEXT) $(ESMALIB)/Python 	
 
 %.$(F2PYEXT): %py.F90 
