PC - reorganizing so aeronet cofiguration stuff is under missions/AERONET.  makefile copies python scripts to bin directory

--- a/src/Components/stn_vlidort/GNUmakefile
+++ b/src/Components/stn_vlidort/GNUmakefile
@@ -26,16 +26,15 @@ endif
 
 THIS := $(shell basename `pwd`)
 LIB   = lib$(THIS).a
+BINS := 
 
-
-PY_EXTS = stnAngles_.$(F2PYEXT) VLIDORT_STN_.$(F2PYEXT)
-PY_SCRP =  
+PY_EXTS = 
+PY_SCRP = stn_vlidort.py aeronet_vlidort.py
 
 esma_install install python_install: $(DEPS) $(LIB) $(BINS) $(PY_EXTS) 
 	$(MKDIR) $(ESMALIB) $(ESMALIB)/Python $(ESMAETC) \
                  $(ESMAINC)/$(THIS) $(ESMABIN)
-	$(CP) -pr $(PY_EXTS)               $(ESMALIB)/Python 
-#	$(CP) -p  $(BINS) $(PY_SCRP)       $(ESMABIN)
+	$(CP) -p  $(BINS) $(PY_SCRP)       $(ESMABIN)
 
 esma_clean clean:
 	$(RM) -rf *~ *.[aox] *.[Mm][Oo][Dd] *.pyc *.$(F2PYEXT) 
@@ -63,61 +62,19 @@ esma_help help:
 #                  --------------------
 #                  User Defined Targets
 #                  --------------------
-INC_VLIDORT90  = $(ESMAINC)/VLIDORT90
-LIB_VLIDORT90  = $(ESMALIB)/libVLIDORT90.a
 
-INC_VLIDORT2OS = $(ESMAINC)/VLIDORT2OS
-LIB_VLIDORT2OS = $(ESMALIB)/libVLIDORT2OS.a
-
-INC_LIDORT3p7  = $(ESMAINC)/LIDORT3p7
-LIB_LIDORT3p7  = $(ESMALIB)/libLIDORT3p7.a
-
-INC_GEOVLIDORT = ../geo_vlidort
-LIB_GEOVLIDORT = ../geo_vlidort/libgeo_vlidort.a
-
-INC_DIRS = . $(INC_MAPL_BASE) $(INC_ESMF) $(INC_MPI) $(INC_NETCDF) $(INC_CHEM_BASE) $(INC_VLIDORT2OS) $(INC_LIDORT3p7) $(INC_GEOVLIDORT)) /usr/include
-USER_FMODS = $(foreach dir,$(INC_DIRS),$(M)$(dir)) 
-USER_FINCS = $(foreach dir,$(INC_DIRS),$(I)$(dir)) 
-
-vpath % $(INC_DIRS) 
-
-FREAL = $(FREAL4)
-THIS_CFIO = MAPL_cfio_r4
-THIS_GFIO = GMAO_gfio_r4
-
-LIBS = $(LIB_GEOVLIDORT) $(LIB_VLIDORT2OS) $(LIB_LIDORT3p7) $(LIB_CHEM_BASE) \
-       $(LIB_MAPL_BASE) $(LIB_MAPL_BASE_STUBS) \
-       $(LIB_MAPL_BASE_STUBS2) \
-       $(LIB_MPEU) $(LIB_CFIO) $(LIB_GFIO) $(LIB_NETCDF) \
-       $(LIB_ESMF) $(LIB_SDF) $(LIB_MPI) $(LIB_SYS)
 
 #                  --------------------
 #                  User Defined Targets
 #                  --------------------
 
-SRCS =  #
+SRCS := 
 OBJS := $(addsuffix .o, $(basename $(SRCS)))
 DEPS := $(addsuffix .d, $(basename $(SRCS))) 
  
 $(LIB) lib : $(DEPS) $(OBJS)
 	$(RM) $(LIB)
 	$(AR) $(AR_FLAGS) $(LIB) $(OBJS)
-
-%.x : $(LIB) %.F90
-	$(FC) $(LDFLAGS) -o $@ $(D)TEST $*.F90 $(LIBS)	
-
-
-# Python extension modules
-# ------------------------
-python: $(PY_EXTS)
-
-VLIDORT_STN_.$(F2PYEXT): VLIDORT_STN_py.F90 
-	$(F2PY) -c -m VLIDORT_STN_ $(M). $(M)$(INC_GEOVLIDORT) \
-                 VLIDORT_STN_py.F90 $(LIBS)                  
-# 	$(CP) -p VLIDORT_.$(F2PYEXT) $(ESMALIB)/Python 	
-
-%.$(F2PYEXT): %py.F90 
-	$(F2PY) -c -m $* $(M). $< 
 
 
 # Hack to prevent remaking dep files during cleaning
