PC - rename from stn_vlidort to directsun_vlidort

--- a/src/Components/stn_vlidort/GNUmakefile
+++ b/src/Components/stn_vlidort/GNUmakefile
@@ -29,7 +29,7 @@ LIB   = lib$(THIS).a
 BINS := 
 
 PY_EXTS = 
-PY_SCRP = stn_vlidort.py aeronet_vlidort.py
+PY_SCRP = directsun_vlidort.py aeronet_vlidort.py
 
 esma_install install python_install: $(DEPS) $(LIB) $(BINS) $(PY_EXTS) 
 	$(MKDIR) $(ESMALIB) $(ESMALIB)/Python $(ESMAETC) \
