--- a/src/Components/geo_vlidort/GNUmakefile
+++ b/src/Components/geo_vlidort/GNUmakefile
@@ -89,6 +89,7 @@ THIS_GFIO = GMAO_gfio_r4
 
 SRCS := sys_tracker.c GeoAngles_py.F90 VLIDORT_LAMBERT.F90 VLIDORT_BRDF_MODIS.F90 VLIDORT_BRDF_MODIS_BPDF.F90 \
 			  LIDORT_LAMBERT.F90 LIDORT_BRDF_MODIS.F90 VLIDORT_SURFACE.F90 SURFACE.F90 VLIDORT_MieMod.F90 \
+			  VLIDORT_BRDF_CX.F90 \
 			  mp_netcdf_Mod.F90 netcdf_Mod.F90
 #			  netcdf_helper.F90
 OBJS := $(addsuffix .o, $(basename $(SRCS)))
