PC add new python scripts to bin

--- a/src/Components/geo_vlidort/GNUmakefile
+++ b/src/Components/geo_vlidort/GNUmakefile
@@ -29,7 +29,7 @@ LIB   = lib$(THIS).a
 BINS := geo_vlidort.x
 
 PY_EXTS = GeoAngles_.$(F2PYEXT)
-PY_SCRP = run_geo_vlidort_lc2.py geo_vlidort_lc2.py geo_warp.py run_geo_vlidort_cloud_lc2.py geo_vlidort_cloud_lc2.py
+PY_SCRP = run_geo_vlidort_lc2.py geo_vlidort_lc2.py geo_warp.py run_geo_vlidort_cloud_lc2.py geo_vlidort_cloud_lc2.py run_geo_vlidort_ocean_lc2.py geo_vlidort_ocean_lc2.py
 
 esma_install install python_install: $(DEPS) $(LIB) $(BINS) $(PY_EXTS) 
 	$(MKDIR) $(ESMALIB) $(ESMALIB)/Python $(ESMAETC) \
