PC - changing names from oasim to nobm

--- a/src/Components/missions/PACE/leo_vlidort_cloud_470-discover.rc
+++ b/src/Components/missions/PACE/leo_vlidort_cloud_470-discover.rc
@@ -11,7 +11,7 @@ LANDNAME: MCD43C
 LANDMODEL: RTLS
 LANDBAND_C: 470 550 650 850 1200 1600 2100
 
-WATERNAME: OASIM-CX
+WATERNAME: NOBM-CX
 WATERMODEL: CX
 
 CHANNELS: 470
