PC -Example of new features

--- a/src/Components/missions/TEMPO/geo_vlidort.rc
+++ b/src/Components/missions/TEMPO/geo_vlidort.rc
@@ -9,11 +9,13 @@ TIME: 17
 INSTNAME: tempo
 SURFNAME: MAIACRTLS
 SURFDATE: 2006008
-SURFBAND: exact
+SURFBAND: interpolate
 SURFBAND_I: 4
-SURFBAND_C: 645 858 469 555 1240 1640 2130 
-SURFBANDM: 7
-SCALAR: false
-CHANNELS: 550
+SURFBAND_C: 645 858 469 555 1240 1640 2130 412
+SURFBANDM: 8
+SCALAR: true
+CHANNELS: 470
 CLDMAX: 0.01
-SZAMAX: 90.0
+ADDITIONAL_OUTPUT: true
+VLIDORT: true
+DO_2OS_CORRECTION: false
