--- a/src/Components/missions/A-CCP/sampling/met_Nv.rc
+++ b/src/Components/missions/A-CCP/sampling/met_Nv.rc
@@ -2,8 +2,7 @@
 # Resource file for geo sampler: met_Nv files for TEMPO
 #
 
-U10M,V10M,PS,TS,PBLH,CLDLOW,CLDMID,CLDHGH,CLDTOT,TAULOW,TAUMID,TAUHGH,TAUTOT: /home/adasilva/opendap/nr/Ganymed/7km/c1440_NR/opendap/0.0625_deg/inst/inst30mn_2d_met1_Nx
-TROPPB,TROPT,TROPQ,IWP,LWP: /home/adasilva/opendap/nr/Ganymed/7km/c1440_NR/opendap/0.0625_deg/inst/inst30mn_2d_met1_Nx
+TROPPB,TROPT,TROPQ,IWP,LWP,U10M,V10M,PS,TS,PBLH,CLDLOW,CLDMID,CLDHGH,CLDTOT,TAULOW,TAUMID,TAUHGH,TAUTOT: /home/adasilva/opendap/nr/Ganymed/7km/c1440_NR/opendap/0.0625_deg/inst/inst30mn_2d_met1_Nx
 FRSNO,FRSEAICE: /home/adasilva/opendap/nr/Ganymed/7km/c1440_NR/opendap/0.0625_deg/tavg/tavg30mn_2d_met2_Nx
 T: /home/adasilva/opendap/nr/Ganymed/7km/c1440_NR/opendap/0.0625_deg/inst/inst30mn_3d_T_Nv
 U: /home/adasilva/opendap/nr/Ganymed/7km/c1440_NR/opendap/0.0625_deg/inst/inst30mn_3d_U_Nv
