--- a/src/Components/missions/A-CCP/rc/Aod_EOS.Osku.rc
+++ b/src/Components/missions/A-CCP/rc/Aod_EOS.Osku.rc
@@ -15,7 +15,7 @@
 n_channels: 1
 n_moments: 300
 #r_channels: .355e-6 .532e-6 1.064e-6
-r_channels: 0.865e-6   
+r_channels: 1.064e-6   
 
 # --------------------------------------------------------------
 #
@@ -30,19 +30,11 @@ r_channels: 0.865e-6
 #            second bin for volcanic aerosols following V. Aquila
 #
 # --------------------------------------------------------------
-#filename_optical_properties_DU: ExtData/g5chem/x.OLD/optics_DU.v1_pmom.nc
-#filename_optical_properties_DU: ExtData/g5chem/x/optics_DU.v5.nc
 filename_optical_properties_DU: ExtData/optics_DU.v15_5.nc
-filename_optical_properties_SS: ExtData/optics_SS.v3_5.nc
-filename_optical_properties_BC: ExtData/optics_BC.v1_5.nc
-filename_optical_properties_OC: ExtData/optics_OC.v1_5.nc
-#filename_optical_properties_SU: ExtData/optics_SU.v1_5.nc
+filename_optical_properties_SS: ExtDataOsku/optics_SS.v3_7.GSFun.nc
+filename_optical_properties_BC: ExtDataOsku/optics_BC.v5_7.GSFun.nc
+filename_optical_properties_OC: ExtDataOsku/optics_OC.v12_7.GSFun.nc
 filename_optical_properties_SU: ExtDataOsku/optics_SU.v5_7.GSFun.nc
 filename_optical_properties_NI:  ExtData/optics_NI.v2_5.nc
 filename_optical_properties_BRC: ExtData/optics_BRC.v1_5.nc
 
-#filename_optical_properties_DU: ExtData/g5chem/x.OLD/optics_DU.v4.nc
-#filename_optical_properties_SS: ExtData/g5chem/x.OLD/optics_SS.v3.nc
-#filename_optical_properties_OC: ExtData/g5chem/x.OLD/optics_OC.nc
-#filename_optical_properties_BC: ExtData/g5chem/x.OLD/optics_BC.nc
-#filename_optical_properties_SU: ExtData/g5chem/x.OLD/optics_SU.v3.nc
