PC - use the SS & DU optics tables with 300 moments

--- a/src/Components/missions/A-CCP/rc/Aod_EOS.Osku.rc
+++ b/src/Components/missions/A-CCP/rc/Aod_EOS.Osku.rc
@@ -30,8 +30,8 @@ r_channels: 1.064e-6
 #            second bin for volcanic aerosols following V. Aquila
 #
 # --------------------------------------------------------------
-filename_optical_properties_DU: ExtData/optics_DU.v15_5.nc
-filename_optical_properties_SS: ExtDataOsku/optics_SS.v3_7.GSFun.nc
+filename_optical_properties_DU: ExtDataOsku/GRASP_LUT-DUST_V4.GSFun-300_fix.nc
+filename_optical_properties_SS: ExtDataOsku/optics_SS.v3_7.GSFun-300.nc
 filename_optical_properties_BC: ExtDataOsku/optics_BC.v5_7.GSFun.nc
 filename_optical_properties_OC: ExtDataOsku/optics_OC.v12_7.GSFun.nc
 filename_optical_properties_SU: ExtDataOsku/optics_SU.v5_7.GSFun.nc
